--- a/AppDev/AppDev.csproj
+++ b/AppDev/AppDev.csproj
@@ -260,6 +260,8 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Admin\CreateTrainingStaff.cshtml" />
+    <Content Include="Views\Admin\IndexForStaff.cshtml" />
+    <Content Include="Views\Admin\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
