--- a/AppDev/AppDev.csproj
+++ b/AppDev/AppDev.csproj
@@ -262,6 +262,8 @@
     <Content Include="Views\Admin\CreateTrainingStaff.cshtml" />
     <Content Include="Views\Admin\IndexForStaff.cshtml" />
     <Content Include="Views\Admin\Index.cshtml" />
+    <Content Include="Views\Admin\EditStaff.cshtml" />
+    <Content Include="Views\Admin\StaffDetails.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
