--- a/AppDev/AppDev.csproj
+++ b/AppDev/AppDev.csproj
@@ -276,6 +276,7 @@
     <Content Include="Views\Admin\ChangePasswordForTrainer.cshtml" />
     <Content Include="Views\TrainningStaff\CreateTrainee.cshtml" />
     <Content Include="Views\TrainningStaff\IndexForTrainingStaff.cshtml" />
+    <Content Include="Views\TrainningStaff\UpdateForTrainee.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
