Adding CreateCourseCatgory Controller and View

--- a/AppDev/AppDev.csproj
+++ b/AppDev/AppDev.csproj
@@ -278,6 +278,8 @@
     <Content Include="Views\TrainningStaff\IndexForTrainingStaff.cshtml" />
     <Content Include="Views\TrainningStaff\UpdateForTrainee.cshtml" />
     <Content Include="Views\TrainningStaff\Index.cshtml" />
+    <Content Include="Views\TrainningStaff\CreateCourseCategory.cshtml" />
+    <Content Include="Views\TrainningStaff\IndexForCourseCategory.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
