--- a/AppDev/AppDev.csproj
+++ b/AppDev/AppDev.csproj
@@ -284,6 +284,7 @@
     <Content Include="Views\TrainningStaff\UpdateForCourseCategory.cshtml" />
     <Content Include="Views\TrainningStaff\CreateForCourse.cshtml" />
     <Content Include="Views\TrainningStaff\IndexForCourse.cshtml" />
+    <Content Include="Views\TrainningStaff\UpdateForCourse.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
