--- a/AppDev/AppDev.csproj
+++ b/AppDev/AppDev.csproj
@@ -296,6 +296,7 @@
     <Content Include="Views\TrainningStaff\IndexForAssignTrainee.cshtml" />
     <Content Include="Views\TrainningStaff\IndexForAssignTrainer.cshtml" />
     <Content Include="Views\TrainningStaff\AssignTrainee.cshtml" />
+    <Content Include="Views\TrainningStaff\AssignTrainer.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
