--- a/AppDev/AppDev.csproj
+++ b/AppDev/AppDev.csproj
@@ -164,6 +164,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\IndexforTrainerandTraineeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\TeamsUsersViewModel.cs" />
     <Compile Include="Controllers\TeamUser.cs" />
@@ -300,6 +301,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\IndexforTrainerandTrainee\" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202112061102100_updateFirstTable.resx">
